# diversion

./: .gitignore  DOC.md  README.md  juiceshop_vulnerabilities.json  models.yaml  prd.md  pyproject.toml
client/: .gitignore  components.json  package.json  pnpm-lock.yaml
client/src/: proxy.ts
client/src/app/: globals.css  landing-data.ts  layout.tsx  page.tsx
client/src/app/dashboard/: layout.tsx
client/src/components/dashboard/: AuditTrailsTable.tsx  DashboardSidebar.tsx  SeverityDonutChart.tsx  (+2 more)
client/src/lib/: api.ts  audit-logs.ts  environments.ts
nazitest/: __init__.py  __main__.py  cli.py  config.py  server.py
nazitest/analysis/: codebase_xref.py  graph_builder.py  knowledge_graph.py  repo_fetcher.py  tech_detector.py
nazitest/core/: auth_gate.py  orchestrator.py  scope.py
nazitest/exploitation/: backoff.py  browser_replay.py  curl_exploit.py  engine.py  strategy.py
nazitest/models/: __init__.py  config.py  exploit.py  graph.py  har.py  recon.py  types.py
nazitest/proxy/: manager.py
nazitest/reasoning/: agents.py  belief.py  openrouter.py  sanitizer.py  web_research.py
nazitest/recon/: browser.py  cookie_jar.py  crawler.py  dom_snapshot.py  har_recorder.py  sitemap.py  ws_monitor.py
nazitest/reporting/: generator.py  pdf.py
nazitest/reporting/templates/: report.html.j2
nazitest/storage/: artifact_store.py  encryption.py  run_manager.py
tests/: test_analysis.py  test_codebase_xref.py  test_config.py  test_core.py  test_exploitation.py  test_models.py  test_reasoning.py  test_recon.py  test_reporting.py  test_storage.py
(+21 files in other folders)
